# ImageTrim

./: .gitignore  CLAUDE.md  CROSS_PLATFORM_BUILD.md  ENVIRONMENT_ANALYSIS.md  GITHUB_ACTIONS_SOLUTION.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  IFLOW.md  ImageTrim.spec  ImageTrim_optimized.spec  ImageTrim_windows.spec  MACOS_COMPILATION_FIX.md  NUITKA_CI_GUIDE.md  OPTIMIZATION_GUIDE.md  PYINSTALLER_FIX.md  QWEN.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  build_confidence_exe.py  build_cross_platform.py  build_modern_tools.py  build_modern_ui.py  build_nuitka.bat  build_nuitka.py  build_optimized.py  build_simple.py  build_simple_exe.py  build_windows_safe.py  check_env.py  check_importlib.py  check_path.py  check_ttkbootstrap.py  check_ttkbootstrap2.py  convert_to_avif.py  create_pr.bat  create_release.py  fix_prompt.ps1  foreground_test_pyqt6.py  function_modules.py  improved_deduplication_module.py  (+18 more)
.claude/: settings.local.json
.github/workflows/: build-multi-platform.yml  build-multi-platform.yml.backup  test-build.yml  (+2 more)
ImagTrimIntro/: result01.avif  result02.avif  start_cut.avif  toAvif.avif
app/: AGENTS.md  README.md  main.py  requirements.txt  start.bat  start.sh
backup/: IFLOW.md  debug_test_pyqt6.py  dedup_test.py  image_tool_config.json  platform_test.py  pure_pyqt6_test.py  simple_pyqt6_test.py  version_info.txt
docker/: build-linux.Dockerfile
docs/: API文档.md  UI设计文档.md  api_spec.yaml  data_schema.json  pyqt6重构总结报告.md  ui_modernization_plan.md  代码开发规范.md  代码拆分和解耦计划.md  技术方案文档.md  新代码框架设计.md  模块接口和依赖关系.md  现有代码分析.md  用户指南.md  详细开发计划.md  项目完成情况总结.md
modules/: avif_converter_module.py  deduplication_module.py  pyqt6_avif_converter_module.py  pyqt6_base_module.py  pyqt6_deduplication_module.py  ui_components.py
packaging/: README.md  build.bat  build.py  build.sh  build_simple.py  create_installer.bat
scripts/: build-linux-docker.sh  build_linux.sh  build_macos.sh
ui/: main_window.py  pyqt6_adapter.py  pyqt6_main_window.py
utils/: error_handler.py  ui_components.py
(+58 files in other folders)
